# hsqf

./: CHANGELOG.md  README.md  Shit.hs  arma.cabal  caba[o[l.project  examples.sqf  flake.nix  foo.sqf
app/: Examples.hs  HSQF.hs  Main.hs  PSQF.hs  SQF.hs  TypedSQF.hs  USQF.hs
app/HSQF/: Api.hs  Common.hs  Definition.hs  HList.hs  Monadic.hs  Prelude.hs  Procedure.hs  Subtyping.hs  Task.hs
app/HSQF/Language/: Common.hs  Definition.hs  HList.hs  List.hs  Monadic.hs  Procedure.hs  Record.hs  Subtyping.hs  Sum.hs  Task.hs
app/PSQF/: Api.hs  Common.hs  Definition.hs  HList.hs  Monadic.hs  Procedure.hs  Subtyping.hs  Task.hs
