cabal-version:      3.0
name:               arma
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable arma
    main-is:          Main.hs
    default-extensions:
      NoStarIsType
      BangPatterns
    -- Modules included in this executable, other than Main.
    other-modules:
       HSQF
       HSQF.Api
       HSQF.Prelude
       HSQF.Language.HList
       HSQF.Language.Definition
       HSQF.Language.Common
       HSQF.Language.Monadic
       HSQF.Language.Procedure
       HSQF.Language.Subtyping
       HSQF.Language.Task
       SQF

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base 
    -- , plutarch-core
    hs-source-dirs:   app
    default-language: Haskell2010
